--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,19 +1,23 @@
-<mat-toolbar style="background-color: white;">
-    <!-- <p>JUSTRAVEL LOGO</p> -->
+<mat-toolbar style="background-color: white">
+  <!-- <p>JUSTRAVEL LOGO</p> -->
 </mat-toolbar>
+<mat-nav-list>
+  <a mat-list-item routerLink="/ventas" routerLinkActive="active"
+    ><mat-icon color="accent">analytics</mat-icon><span>Ventas</span></a
+  >
+</mat-nav-list>
 <!-- <mat-nav-list>
-    <a mat-list-item routerLink="."><mat-icon color="accent">analytics</mat-icon><span>Ventas</span></a>
-  </mat-nav-list>
-  <mat-nav-list>
     <a mat-list-item routerLink="."><mat-icon color="accent">book_online</mat-icon><span>Pases</span></a>
   </mat-nav-list> -->
 <mat-nav-list>
-    <a mat-list-item routerLink="/establishmentList" routerLinkActive="active">
-        <mat-icon color="accent">store</mat-icon><span>Establecimientos</span></a>
+  <a mat-list-item routerLink="/establishmentList" routerLinkActive="active">
+    <mat-icon color="accent">store</mat-icon><span>Establecimientos</span></a
+  >
 </mat-nav-list>
 <mat-nav-list>
-    <a mat-list-item routerLink="/servicesList">
-        <mat-icon color="accent">menu_book</mat-icon><span>Servicios</span></a>
+  <a mat-list-item routerLink="/servicesList" routerLinkActive="active">
+    <mat-icon color="accent">menu_book</mat-icon><span>Servicios</span></a
+  >
 </mat-nav-list>
 <!-- <mat-nav-list>
     <a mat-list-item routerLink="."><mat-icon color="accent">confirmation_number</mat-icon><span>Vales</span></a>
@@ -31,8 +35,9 @@
     <a mat-list-item routerLink="."><mat-icon color="accent">folder_shared</mat-icon><span>Colaboradores</span></a>
   </mat-nav-list> -->
 <mat-nav-list>
-    <a mat-list-item routerLink="/clients">
-        <mat-icon color="accent">account_box</mat-icon><span>Clientes</span></a>
+  <a mat-list-item routerLink="/clientList" routerLinkActive="active">
+    <mat-icon color="accent">account_box</mat-icon><span>Clientes</span></a
+  >
 </mat-nav-list>
 <!-- <mat-nav-list>
     <a mat-list-item routerLink="."><mat-icon color="accent">groups</mat-icon><span>Team</span></a>
