--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,30 +1,85 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
+
 @include mat.core();
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$JustravelBackoffice-primary: mat.define-palette(mat.$indigo-palette);
-$JustravelBackoffice-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-// The warn palette is optional (defaults to red).
+
+$my-accent-color: (
+    50 : #fff4e0,
+    100 : #ffe3b3,
+    200 : #ffd180,
+    300 : #febf4d,
+    400 : #feb126,
+    500 : #fea300,
+    600 : #fe9b00,
+    700 : #fe9100,
+    800 : #fe8800,
+    900 : #fd7700,
+    A100 : #ffffff,
+    A200 : #fff6f1,
+    A400 : #ffd8be,
+    A700 : #ffc9a4,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #000000,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$my-primary-color: (
+    50 : #e1e9f2,
+    100 : #b3c8de,
+    200 : #80a4c8,
+    300 : #4d80b1,
+    400 : #2764a1,
+    500 : #014990,
+    600 : #014288,
+    700 : #01397d,
+    800 : #013173,
+    900 : #002161,
+    A100 : #91acff,
+    A200 : #5e86ff,
+    A400 : #2b60ff,
+    A700 : #124cff,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #ffffff,
+        A700 : #ffffff,
+    )
+);
+
+$JustravelBackoffice-primary: mat.define-palette($my-primary-color);
+$JustravelBackoffice-accent: mat.define-palette($my-accent-color);
 $JustravelBackoffice-warn: mat.define-palette(mat.$red-palette);
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
+
 $JustravelBackoffice-theme: mat.define-light-theme(( color: ( primary: $JustravelBackoffice-primary, accent: $JustravelBackoffice-accent, warn: $JustravelBackoffice-warn, )));
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
+
 @include mat.all-component-themes($JustravelBackoffice-theme);
 
-/* You can add global styles to this file, and also import other style files */
 
 html,
 body {
